# GoldenRecomp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  N64Recomp
include/: recomp_input.h  zelda_render.h
include/librecomp/: recomp.h
lib/: FindFreetype.cmake
patches/: bgcrash.c  externs.h  gunfixes.c  misc_funcs.h  mouselook.c  skybox.c  syms.ld  ui_funcs.h  widescreen.c  workbench_theboy.c
src/game/: config.cpp  controls.cpp  input.cpp  input_compat.cpp  recomp_api.cpp
src/main/: main.cpp  rt64_render_context.cpp
toolchain-patches/: README.md  n64recomp-local-fixes.patch  n64recomp-renamed-funcs.patch  recompfrontend-local-fixes.patch
